--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,22 +6,34 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PieChart"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.SplashActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Activity.MainActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".Activity.LoginActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".Activity.ChooseActivity"
+            android:exported="true">
+    </activity>
     </application>
 
 </manifest>
