--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,10 @@
             android:name=".Activity.LoginActivity"
             android:exported="true">
         </activity>
+        <activity android:name=".Activity.RegisterActivity"
+            android:exported='true'>
 
+        </activity>
         <activity
             android:name=".Activity.ChooseActivity"
             android:exported="true"
