InfoActivity And QuanLy

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:exported="true">
         </activity>
         <activity
+            android:name=".Activity.InfoDnActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".Activity.LoginActivity"
             android:exported="true">
         </activity>
