--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,11 @@
             android:name=".Activity.LoginActivity"
             android:exported="true">
         </activity>
+
+        <activity
+            android:name=".Activity.SanPhamActivity"
+            android:exported="true">
+        </activity>
         <activity
             android:name=".Activity.RegisterActivity"
             android:exported="true">
