--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity
             android:name=".Activity.SplashActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:theme="@style/Theme.App.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -37,11 +37,6 @@
             android:name=".Activity.LoginActivity"
             android:exported="true">
         </activity>
-
-        <activity
-            android:name=".Activity.SanPhamActivity"
-            android:exported="true">
-        </activity>
         <activity
             android:name=".Activity.RegisterActivity"
             android:exported="true">
@@ -52,5 +47,4 @@
             android:label="">
     </activity>
     </application>
-
 </manifest>
