--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".Activity.SplashActivity"
-            android:exported="true"
-            android:theme="@style/Theme.App.Splash">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -26,25 +25,12 @@
             android:exported="true">
         </activity>
         <activity
-            android:name=".Activity.Main_DN_Activity"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".Activity.InfoDnActivity"
+            android:name=".Activity.MainDnActivity"
             android:exported="true">
         </activity>
         <activity
             android:name=".Activity.LoginActivity"
             android:exported="true">
         </activity>
-        <activity
-            android:name=".Activity.RegisterActivity"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".Activity.ChooseActivity"
-            android:exported="true"
-            android:label="">
-    </activity>
     </application>
 </manifest>
