--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,4 +34,5 @@
             android:exported="true">
         </activity>
     </application>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 </manifest>
